<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/workout_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="About Us"
        android:fontFamily="@font/qsbold"
        android:textColor="@color/brown"
        android:textSize="20dp"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/aboutus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/workout_about"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/info_aboutus"
                   android:fontFamily="@font/qsbold"
                   android:textSize="18dp"
                   android:textAlignment="center"
                   android:layout_margin="10dp"
                   android:textColor="@color/black"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/info_aboutusp2"
                   android:fontFamily="@font/qsbold"
                   android:textSize="18dp"
                   android:textAlignment="center"
                   android:layout_margin="10dp"
                   android:textColor="@color/black"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/info_aboutusp3"
                   android:fontFamily="@font/qsbold"
                   android:textSize="18dp"
                   android:textAlignment="center"
                   android:layout_margin="10dp"
                   android:textColor="@color/black"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/info_aboutusp4"
                   android:fontFamily="@font/qsbold"
                   android:textSize="18dp"
                   android:textAlignment="center"
                   android:layout_margin="10dp"
                   android:textColor="@color/black"/>

           </LinearLayout>

        </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>