<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/brown">

    <RelativeLayout
        android:id="@+id/rltv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_card"
        android:orientation="horizontal"
        android:layout_above="@id/bottombar">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="10dp"
            app:layout_constraintVertical_bias="0.03"
            android:background="@drawable/rounded_card2"
            android:id="@+id/gambar">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/chest"/>

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_back"
                    android:drawableStart="@drawable/ic_baseline_arrow_back_ios_24"
                    android:layout_gravity="center_horizontal|left"
                    android:layout_margin="10dp"
                    android:onClick="kembali"
                    android:padding="13dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/CHEST"
                    android:fontFamily="@font/qsbold"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="bottom"
                    android:padding="10dp"
                    android:text="@string/chestinfo"
                    android:fontFamily="@font/qsbold"/>

            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/gambar"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/pushup"
                    android:orientation="horizontal"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="10dp"
                    android:background="@drawable/rounded_card3"
                    android:layout_margin="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/push"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/pushup"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Push Up"
                            android:textStyle="bold"
                            android:fontFamily="@font/qsbold"
                            android:textColor="@color/black"
                            android:layout_toRightOf="@+id/push"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            android:id="@+id/txt" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="10x"
                            android:textSize="10dp"
                            android:fontFamily="@font/qsbold"
                            android:layout_toRightOf="@+id/push"
                            android:layout_alignParentBottom="true"
                            android:paddingLeft="10dp"
                            android:layout_below="@+id/txt" />

                        <TextView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:background="@drawable/ic_baseline_arrow_forward_ios_24"
                            android:layout_alignParentRight="true"
                            android:layout_margin="10dp"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/widearmpush"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="10dp"
                    android:background="@drawable/rounded_card3"
                    android:layout_margin="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/widearm"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/widepushup"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Wide Arm Push Up"
                            android:textStyle="bold"
                            android:fontFamily="@font/qsbold"
                            android:textColor="@color/black"
                            android:layout_toRightOf="@+id/widearm"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            android:id="@+id/txt2"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="5x"
                            android:textSize="10dp"
                            android:fontFamily="@font/qsbold"
                            android:layout_toRightOf="@+id/widearm"
                            android:layout_alignParentBottom="true"
                            android:paddingLeft="10dp"
                            android:layout_below="@+id/txt2"/>

                        <TextView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:background="@drawable/ic_baseline_arrow_forward_ios_24"
                            android:layout_alignParentRight="true"
                            android:layout_margin="10dp"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/kneepushup"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="10dp"
                    android:background="@drawable/rounded_card3"
                    android:layout_margin="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/kneepush"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/kneepushup"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Knee Push Up"
                            android:textStyle="bold"
                            android:fontFamily="@font/qsbold"
                            android:textColor="@color/black"
                            android:layout_toRightOf="@+id/kneepush"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            android:id="@+id/txt3"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="10x"
                            android:textSize="10dp"
                            android:fontFamily="@font/qsbold"
                            android:layout_toRightOf="@+id/kneepush"
                            android:layout_alignParentBottom="true"
                            android:paddingLeft="10dp"
                            android:layout_below="@+id/txt3"
                            />

                        <TextView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:background="@drawable/ic_baseline_arrow_forward_ios_24"
                            android:layout_alignParentRight="true"
                            android:layout_margin="10dp"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/inclinepushup"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="10dp"
                    android:background="@drawable/rounded_card3"
                    android:layout_margin="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/inclinepush"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/inchlinepushup"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Incline Push Up"
                            android:textStyle="bold"
                            android:fontFamily="@font/qsbold"
                            android:textColor="@color/black"
                            android:layout_toRightOf="@+id/inclinepush"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            android:id="@+id/txt4"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="5x"
                            android:textSize="10dp"
                            android:fontFamily="@font/qsbold"
                            android:layout_toRightOf="@+id/inclinepush"
                            android:layout_alignParentBottom="true"
                            android:paddingLeft="10dp"
                            android:layout_below="@+id/txt4"
                            />

                        <TextView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:background="@drawable/ic_baseline_arrow_forward_ios_24"
                            android:layout_alignParentRight="true"
                            android:layout_margin="10dp"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cobrastretch"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="10dp"
                    android:background="@drawable/rounded_card3"
                    android:layout_margin="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/cobras"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/cobra"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Cobra Stretch"
                            android:textStyle="bold"
                            android:fontFamily="@font/qsbold"
                            android:textColor="@color/black"
                            android:layout_toRightOf="@+id/cobras"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            android:id="@+id/txt5"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="30sec"
                            android:textSize="10dp"
                            android:fontFamily="@font/qsbold"
                            android:layout_toRightOf="@+id/cobras"
                            android:layout_alignParentBottom="true"
                            android:paddingLeft="10dp"
                            android:layout_below="@+id/txt5"
                            />

                        <TextView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:background="@drawable/ic_baseline_arrow_forward_ios_24"
                            android:layout_alignParentRight="true"
                            android:layout_margin="10dp"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:padding="25dp">

        <Button
            android:id="@+id/startWorkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_button"
            android:theme="@style/btn_start"
            android:textColor="@color/brown"
            android:fontFamily="@font/qsbold"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"/>

    </FrameLayout>

</RelativeLayout>


